test/arrays/bradc/scalarArrMismatch.good
scalarArrMismatch.chpl:4: error: Cannot initialize [domain(1,int(64),false)] real(32) from real(64)
